# fritts

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: USER_GUIDE.md  scope.md
docs/research-papers/: Dendrochronology Software Development Research.md
docs/research-prompts/: 01-06_combo.txt  01_tree_ring_data_formats.txt  02_crossdating_algorithms.txt  03_image_processing_for_ring_widths.txt  04_existing_dendro_software.txt  05_master_chronology_databases.txt  06_ui_for_visual_crossmatching.txt  Dendochronology_research_prompts_v2.md
src/dendro/: __init__.py  main.py
src/dendro/io/: __init__.py  export_r.py  heidelberg.py  itrdb.py  tridas.py  tucson.py
src/dendro/models/: __init__.py  commands.py  series.py  session.py
src/dendro/resources/: __init__.py
src/dendro/stats/: __init__.py  ai_segmentation.py  chronology.py  crossdate.py  detrend.py  quality_control.py
src/dendro/ui/: __init__.py  chronology_builder.py  detrend_dialog.py  dialogs.py  image_view.py  itrdb_dialog.py  main_window.py  qc_dialog.py  series_list.py  series_view.py  stats_panel.py
tests/: test_commands.py  test_crossdate.py  test_detrend.py  test_itrdb.py  test_tucson_parser.py
