[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fritts"
version = "0.1.2"
description = "Open-source desktop tool for tree-ring cross-dating, measurement, and master chronology building."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mark"},
]

dependencies = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13,<0.15",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "lxml>=5.0",
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "ruff>=0.4",
]

[project.scripts]
fritts = "dendro.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"

[tool.ruff]
target-version = "py310"
line-length = 100
